# milton

./: .gitignore  Makefile  README.md  pyproject.toml
docs/developer/: README.md
docs/user/: README.md
milton/: main.py
milton/agents/: __init__.py  boss.py  employee.py  user_proxy.py
milton/core/: logging.py
milton/server/: server.py
milton/tools/: __init__.py  memo_maker.py
